-Fixed bug involving clones of clones of card types (reported by 
 Anselm Wooden).
-Warn before deleting orphaned media files (reported by Murray 
 James Morrison).

-added 'show_tags_during_review' option to config.py in order to be able
 to hide the tags in the review window. Let me know if you use it, so that I
 can make this more visible if more people use it (requested by Sander 
 Hoogendoorn).
-Build system fixes (James Litton)
-Make dialog titles more consistent (reported by Troy Guze).
-Don't create a silly popup menu saying 'toolBar' when right clicking on
 the toolbar (reported by Troy Guze).
-Make grade shortcuts work in cramming scheduler (<=1 for pass) 
 (reported by Troy Guze).
-The enter and escape keys now work again to close the preview dialog
-More scheduler tweaks.
-More in-program help.
	
MNEMOSYNE 2.0

More than three years in the making, this is essentially a complete rewrite of 
the old 1.x codebase, with a new, clean design, consisting of components that
can be swapped in and out very easily, which allows plugin writers maximum 
flexibility.

Major user-visible changes:
	
-Support for what is called card types. The main user visible changes are that
 editing a vice versa card or three sided card will automatically update the
 related card. There is also support for N-sided cards.
-Whereas in Mnemosyne 1.x, a card could belong to only one category, now a 
 card can have multiple tags. Tags can also be organised in a hierachy, with
 '::' separating the levels of the hierachy.
-Powerful new card browser, giving much more information and flexibility to
 organise your cards.
-'Activate cards' is completely revamped and is much more flexible. Also, sets
 of active cards can be now be saved for easier access later.
-Graphical statistics, easily extensible through plugins (first
 implementation by Mike Appleby).
-Each individual field in a card can now have its own font, colour, ... which